# vc-verifier-rust

./: .env.sample  .gitignore  Cargo.toml  README.md
sample/: credential.json
scripts/: Cargo.toml
scripts/src/: main.rs
server/: Cargo.toml
server/src/: key_locator.rs  main.rs  middleware.rs
utils/config/: Cargo.toml
utils/config/src/: lib.rs
utils/jwt-utils/: Cargo.toml
utils/jwt-utils/src/: lib.rs
