[package]
name = "vc-holder-script"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.2", features = ["derive"] }
jwt-utils = { path = "../utils/jwt-utils" }
config = { path = "../utils/config" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }