[package]
name = "vc-verifier-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10"
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.10"
jwt-utils = { path = "../utils/jwt-utils" }
config = { path = "../utils/config" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
futures-util = "0.3.31"
actix-service = "2.0.3"
